add virtual platform args to CLI
